--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,8 @@
     font-style: normal; 
     color:var(--main-text-color);
     width: 100%;
-    margin: 0 auto;
-}
 
+}
 
 .header-div-container, .about-us-style, .main-style{ 
     background-color:var(--white-color);
@@ -37,38 +36,39 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    margin: 0px auto;
     width: 100%;
-    margin: 0 auto;
-    border-bottom:  1px; color: #ECECEC; 
 }
 
 .logo-section{
-    border: 1px solid red;
+    width: 145px;
     margin: 24px 93px 25px 215px;
  }
 
- .link-header-style{display: flex;
+ .link-header-style{
+    display: flex;
     flex-direction:row; 
     align-items: center;
     justify-content: space-between;
-    width: 259px;
+    width:259px;
     margin-top: 32px;
     margin-bottom: 32px;
+    padding: 0px 0px 0px 0px;
 }
  
- .header-contacts {display: flex;
+ .header-contacts {
+    display: flex;
     flex-direction:row; 
     align-items: center;
     justify-content: space-between;
-    width: 288px;
-    margin: 32px 215px 32px 385px;
+    width:288px;
+    padding:0px 0px 0px 0px;
+    margin:32px 215px 32px 385px;
 }
 
 .main-section{display: flex;
     flex-direction: row;
     width: 100%;
-
 }
 
 .title-section-style{
@@ -79,6 +79,8 @@
     padding-top: 200px;
     padding-bottom: 200px;
 }
+
+
 
 .about-us-style{
     display: flex;
@@ -95,8 +97,9 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    column-gap: 30px;  
+    width: 1170px;
+    column-gap: 30px;
+    padding: 0px 0px 0px 0px;  
     margin: 0px 215px 94px 215px;
 }
 .feature-h2{ 
@@ -105,11 +108,12 @@
 }
 .feature-img-style{
     list-style: none;
-    width: 1170px;
     height: auto;
     display:flex;
     flex-direction: row;
     align-items: center;
+    width: 1170px;
+    padding: 0px 0px 0px 0px;
     margin: 50px 215px 0px 215px;
     column-gap: 30px;
 }
@@ -134,6 +138,7 @@
     flex-direction: row;
     align-items: center;
     width: 1170px;
+    padding: 0px 0px 0px 0px;
     margin: 0px 215px 0px 215px ; 
     column-gap: 30px;
 }
@@ -155,23 +160,31 @@
     padding-top: 60px;
     padding-bottom: 60px;
 }
- .logo-style{ 
-    display: flex;
-    flex-direction: row;
-    margin-left: 215px;
-    margin-right: 1240;
-    padding-bottom: 28px; 
-}
-.adr1, .adr2, .adr3{margin-left:215px;
-}
 
+.footer-logo-style{
+    width: 145px;
+    margin: 0px 1240px 28px 215px;
+
+}
+.adr1{
+    width: 207px;
+    margin: 28px 1178px 0px 215px;
+}
+.adr2 { 
+    width: 231px;
+    margin: 0px 1154px 0px 215px;
+} 
+.adr3{width: 231px;
+    margin: 0px 1154px 0px 215px;
+
+}
 .footer-studio-style{
     color:var(--white-color);
 }
 
 
 
-.logo-style { 
+.logo-style, .footer-logo-style { 
     color:var(--header-logo-studio-color); 
     font-family: "Raleway";
     font-size: 26px;
@@ -270,8 +283,7 @@
 }
 
 .portofolio-img-section{
-    display: flex;
-    flex-wrap: wrap;
+    box-sizin: content-box;
     flex-basis: calc((100%-60px)/3 );
     column-gap: 30px;
 }
