--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     font-family:var(--main-text-style); 
     font-style: normal; 
     color:var(--main-text-color);
-    width: 100%;
+    width: 1600px;
 
 }
 
@@ -28,16 +28,16 @@
     background-color:var(--button-background-color);
 }
 
-.nav-section-portofolio{
-    border-bottom:1px red ;
-}
+
+/* Studio box part */
 
 .header-div-container{
     display: flex;
     flex-direction: row;
     align-items: center;
     margin: 0px auto;
-    width: 100%;
+    width: 1600px;
+    border-bottom: 1px solid #EEE;
 }
 
 .logo-section{
@@ -66,16 +66,14 @@
     margin:32px 215px 32px 385px;
 }
 
-.main-section{display: flex;
-    flex-direction: row;
-    width: 100%;
-}
+
+
 
 .title-section-style{
     display: flex; 
     align-items: center;
     flex-direction: column;
-    width: 100%;
+    width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
 }
@@ -86,12 +84,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 1600px;
     padding: 94px 0px 94px 0px;
 }
-
-
-
 .features-style{ 
     display:flex;
     flex-direction: row;
@@ -124,7 +119,7 @@
     display: flex; 
     align-items: center;
     flex-direction: column;
-    width: 100%;
+    width: 1600px;
     padding: 94px 0px 94px 0px;
 }
 .our-team-style h2{
@@ -150,13 +145,17 @@
     background-color: var(--white-color);
     flex-direction: row;
     column-gap: 30px;
+    border-top: none;
     text-align: center;
     padding: 30px 61px 30px 62px;
     border-radius: 0px 0px 4px 4px;
+    margin-top: -5px;
 }
 
+
+
 .footer-style{
-    width: 100%;
+    width: 1600px;
     padding-top: 60px;
     padding-bottom: 60px;
 }
@@ -164,7 +163,6 @@
 .footer-logo-style{
     width: 145px;
     margin: 0px 1240px 28px 215px;
-
 }
 .adr1{
     width: 207px;
@@ -178,6 +176,77 @@
     margin: 0px 1154px 0px 215px;
 
 }
+
+
+/* Portofolio margin/padding section*/
+
+.main-style{
+    width: 1600px;
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.portofolio-section{
+     width: 1170px;
+     margin: 0px 215px;
+}
+
+.portofolio-buttons{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    column-gap: 8px;
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+}
+
+.portofolio-img-section {
+    display: flex;
+    margin: 50px 0px 0px;
+}
+.our-portofolio-style{
+   display: flex;
+   flex-wrap: wrap;
+   gap: 30px;
+   padding: 0px;
+   list-style: none;
+   margin: 0px;
+}
+
+.our-portofolio-style li img{
+  max-width: 100%;
+  height: auto; 
+}
+
+
+.text-images{
+    background-color: var(--white-color);
+    border-top: none;
+    border: 2px solid #EEE;
+    flex-basis: calc((100%-60px)/3);
+}
+.our-portofolio-style li span{
+    margin: 0px 24px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+.our-portofolio-style li p{
+    margin: 4px 24px 20px 24px;
+} 
+
+  
+
+
+
+
+
+
+
+
+/* Studio and Portofolio styles section*/
+
 .footer-studio-style{
     color:var(--white-color);
 }
@@ -266,27 +335,10 @@
 
 
 
-.main-style{
-    width: 100%;
-    padding-top: 94px;
-    padding-bottom: 94px ;
-}
 
 
-.portofolio-buttons{
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    column-gap: 8px;
-}
 
-.portofolio-img-section{
-    box-sizin: content-box;
-    flex-basis: calc((100%-60px)/3 );
-    column-gap: 30px;
-}
+
 
 
 .buttons-style{
@@ -377,10 +429,6 @@ h2{
     color:var(--main-activ-text-color);
 }
 
-
-.our-portofolio-style{
-    list-style: none;
-}
 
 .our-portofolio-style span{
     color:var(--main-text-color);
