--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,12 @@
     font-family:var(--main-text-style); 
     font-style: normal; 
     color:var(--main-text-color);
-    width: 1600px;
 
 }
+
+
+
+
 
 .header-div-container, .about-us-style, .main-style{ 
     background-color:var(--white-color);
@@ -35,20 +38,19 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 0px auto;
-    width: 1600px;
+    margin: 0px 215px 0px 215px;
+    width: 75%;
     border-bottom: 1px solid #EEE;
 }
 
 .logo-section{
     width: 145px;
-    margin: 24px 93px 25px 215px;
+    margin: 24px 93px 25px 0px;
  }
 
  .link-header-style{
     display: flex;
     flex-direction:row; 
-    align-items: center;
     justify-content: space-between;
     width:259px;
     margin-top: 32px;
@@ -59,11 +61,10 @@
  .header-contacts {
     display: flex;
     flex-direction:row; 
-    align-items: center;
     justify-content: space-between;
     width:288px;
     padding:0px 0px 0px 0px;
-    margin:32px 215px 32px 385px;
+    margin:32px 0px 32px 385px;
 }
 
 
@@ -73,7 +74,7 @@
     display: flex; 
     align-items: center;
     flex-direction: column;
-    width: 1600px;
+    width: 100%;
     padding-top: 200px;
     padding-bottom: 200px;
 }
@@ -84,7 +85,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 1600px;
+    width: 100%;
     padding: 94px 0px 94px 0px;
 }
 .features-style{ 
@@ -92,7 +93,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 1170px;
+    width: 75%;
     column-gap: 30px;
     padding: 0px 0px 0px 0px;  
     margin: 0px 215px 94px 215px;
@@ -107,20 +108,20 @@
     display:flex;
     flex-direction: row;
     align-items: center;
-    width: 1170px;
+    width: 75%;
     padding: 0px 0px 0px 0px;
     margin: 50px 215px 0px 215px;
     column-gap: 30px;
 }
 
 
-
 .our-team-style{
     display: flex; 
     align-items: center;
     flex-direction: column;
-    width: 1600px;
+    width: 100%;
     padding: 94px 0px 94px 0px;
+    
 }
 .our-team-style h2{
     width: 165px;
@@ -132,9 +133,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 1170px;
-    padding: 0px 0px 0px 0px;
-    margin: 0px 215px 0px 215px ; 
+    width: 75%;
+    padding: 0px;
+    margin: 0px; 
     column-gap: 30px;
 }
 .staf-style img{
@@ -155,10 +156,12 @@
 
 
 .footer-style{
-    width: 1600px;
+    width: 100%;
     padding-top: 60px;
     padding-bottom: 60px;
+    align-items:flex-start;
 }
+
 
 .footer-logo-style{
     width: 145px;
